--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .center select {
-    color: grey;
+    color: dimgrey;
     border: 1px solid white;
     border-radius: 2px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
